feat(payment): add Kueski payment method logo and styling

--- a/packages/core/src/scss/components/checkout/paymentProvider/_paymentProvider.scss
+++ b/packages/core/src/scss/components/checkout/paymentProvider/_paymentProvider.scss
@@ -43,6 +43,10 @@
     height: fontSize("larger");
 }
 
+.paymentProviderHeader-img-kueskiPay {
+    margin-top: spacing("quarter");
+}
+
 .googlePay-logo {
     height: remCalc(40px);
 }
